dependencies/gles/source/gles/gl2.d

alias PFNGLVERTEXATTRIB2FVPROC = void function (GLuint index, GLfloat* v);
alias PFNGLVERTEXATTRIB3FPROC = void function (GLuint index, GLfloat x, GLfloat y, GLfloat z);
alias PFNGLVERTEXATTRIB3FVPROC = void function (GLuint index, GLfloat* v);
alias PFNGLVERTEXATTRIB4FPROC = void function (GLuint index, GLfloat x, GLfloat y, GLfloat z, GLfloat w);
alias PFNGLVERTEXATTRIB4FVPROC = void function (GLuint index, GLfloat* v);
alias PFNGLVERTEXATTRIBPOINTERPROC = void function (GLuint index, GLint size, GLenum type, GLboolean normalized, GLsizei stride, void* pointer);
alias PFNGLVIEWPORTPROC = void function (GLint x, GLint y, GLsizei width, GLsizei height);
void glActiveTexture (GLenum texture);
void glAttachShader (GLuint program, GLuint shader);
version(WebAssembly)
{
    void wglBindAttribLocation(GLuint program, GLuint index, size_t nameLen, const GLchar* namePtr);
    void glBindAttribLocation(GLuint program ,GLuint index, const GLchar* name)
    {
        size_t length = 0;
        while(name[length++] != '\0'){}
        assert(length != 0, "Can't send a 0 length string to wglBindAttribLocation");
        wglBindAttribLocation(program, index, length-1, name);
    }
}
else
void glBindAttribLocation (GLuint program, GLuint index, GLchar* name);
void glBindBuffer (GLenum target, GLuint buffer);
void glBindFramebuffer (GLenum target, GLuint framebuffer);
void glBindRenderbuffer (GLenum target, GLuint renderbuffer);
void glBindTexture (GLenum target, GLuint texture);
void glBlendColor (GLfloat red, GLfloat green, GLfloat blue, GLfloat alpha);
void glBlendEquation (GLenum mode);
void glBlendEquationSeparate (GLenum modeRGB, GLenum modeAlpha);
void glBlendFunc (GLenum sfactor, GLenum dfactor);
void glBlendFuncSeparate (GLenum sfactorRGB, GLenum dfactorRGB, GLenum sfactorAlpha, GLenum dfactorAlpha);
version(WebAssembly)
{
    void glBufferData (GLenum target, GLuint size, void* data, GLenum usage);
    void glBufferSubData (GLenum target, GLint offset, GLuint size, const(void)* data);
}
else
{
    void glBufferData (GLenum target, GLsizeiptr size, void* data, GLenum usage);
    void glBufferSubData (GLenum target, GLintptr offset, GLsizeiptr size, const(void)* data);
}
GLenum glCheckFramebufferStatus (GLenum target);
void glClear (GLbitfield mask);
void glClearColor (GLfloat red, GLfloat green, GLfloat blue, GLfloat alpha);
void glClearDepthf (GLfloat d);
void glClearStencil (GLint s);
void glColorMask (GLboolean red, GLboolean green, GLboolean blue, GLboolean alpha);
void glCompileShader (GLuint shader);
void glCompressedTexImage2D (GLenum target, GLint level, GLenum internalformat, GLsizei width, GLsizei height, GLint border, GLsizei imageSize, void* data);
void glCompressedTexSubImage2D (GLenum target, GLint level, GLint xoffset, GLint yoffset, GLsizei width, GLsizei height, GLenum format, GLsizei imageSize, void* data);
void glCopyTexImage2D (GLenum target, GLint level, GLenum internalformat, GLint x, GLint y, GLsizei width, GLsizei height, GLint border);
void glCopyTexSubImage2D (GLenum target, GLint level, GLint xoffset, GLint yoffset, GLint x, GLint y, GLsizei width, GLsizei height);
GLuint glCreateProgram ();
GLuint glCreateShader (GLenum type);
void glCullFace (GLenum mode);
version(WebAssembly)
{
    void glDeleteBuffer(GLuint buffer);
    void glDeleteBuffers (GLsizei n, GLuint* buffers)
    {
        assert(n == 1, "WebGL only allows deleting 1 buffer");
        glDeleteBuffer(*buffers);
        *buffers = 0;
    }
}
else
{
    void glDeleteBuffers (GLsizei n, GLuint* buffers);
}
version(WebAssembly)
{
    void glDeleteFramebuffer(GLuint framebuffer);
    void glDeleteFramebuffers (GLsizei n, GLuint* framebuffers)
    {
        assert(n == 1, "WebGL only allows deleting 1 framebuffer");
        glDeleteFramebuffer(*framebuffers);
        *framebuffers = 0;
    }
}
else
{
    void glDeleteFramebuffers (GLsizei n, GLuint* framebuffers);
}
void glDeleteProgram (GLuint program);
version(WebAssembly)
{
    void glDeleteRenderbuffer(GLuint renderbuffer);
    void glDeleteRenderbuffers (GLsizei n, GLuint* renderbuffers)
    {
        assert(n == 1, "WebGL only allows deleting 1 Renderbuffer");
        glDeleteRenderbuffer(*renderbuffers);
        *renderbuffers = 0;
    }
}
else
{
    void glDeleteRenderbuffers (GLsizei n, GLuint* renderbuffers);
}
void glDeleteShader (GLuint shader);
version(WebAssembly)
{
    void glDeleteTexture(GLuint texture);
    void glDeleteTextures (GLsizei n, GLuint* textures)
    {
        assert(n == 1, "WebGL only allows deleting 1 texture");
        glDeleteTexture(*textures);
        *textures = 0;
    }    
}
else
{
    void glDeleteTextures (GLsizei n, GLuint* textures);
}
void glDepthFunc (GLenum func);
void glDepthMask (GLboolean flag);
void glDepthRangef (GLfloat n, GLfloat f);
void glDetachShader (GLuint program, GLuint shader);
void glDisable (GLenum cap);
void glDisableVertexAttribArray (GLuint index);
void glDrawArrays (GLenum mode, GLint first, GLsizei count);
void glDrawElements (GLenum mode, GLsizei count, GLenum type, void* indices);
void glEnable (GLenum cap);
void glEnableVertexAttribArray (GLuint index);
void glFinish ();
void glFlush ();
void glFramebufferRenderbuffer (GLenum target, GLenum attachment, GLenum renderbuffertarget, GLuint renderbuffer);
void glFramebufferTexture2D (GLenum target, GLenum attachment, GLenum textarget, GLuint texture, GLint level);
void glFrontFace (GLenum mode);
version(WebAssembly)
{
    GLuint glCreateBuffer();
    void glGenBuffers (GLsizei n, GLuint* buffers)
    {
        assert(n == 1, "Can't create more than one buffer on wasm");
        *buffers = glCreateBuffer();
    }
}
else
{
    void glGenBuffers (GLsizei n, GLuint* buffers);
}
void glGenerateMipmap (GLenum target);
version(WebAssembly)
{
    GLuint glCreateFramebuffer();
    GLuint glCreateRenderbuffer();

    void glGenFramebuffers (GLsizei n, GLuint* framebuffers)
    {
        assert(n == 1, "WebGL can only create 1 framebuffer per time");
        *framebuffers = glCreateFramebuffer();
    }
    void glGenRenderbuffers (GLsizei n, GLuint* renderbuffers)
    {
        assert(n == 1, "WebGL can only create 1 renderbuffer per time");
        *renderbuffers = glCreateRenderbuffer();
    }
}
else
{
    void glGenFramebuffers (GLsizei n, GLuint* framebuffers);
    void glGenRenderbuffers (GLsizei n, GLuint* renderbuffers);
}
version(WebAssembly)
{
    GLuint glCreateTexture ();
    void glGenTextures (GLsizei n, GLuint* textures)
    {
        assert(n == 1, "WebGL only allows generating 1 texture per time.");
        *textures = glCreateTexture();
    }
}
else
{
    void glGenTextures (GLsizei n, GLuint* textures);
}
void glGetActiveAttrib (GLuint program, GLuint index, GLsizei bufSize, GLsizei* length, GLint* size, GLenum* type, GLchar* name);
void glGetActiveUniform (GLuint program, GLuint index, GLsizei bufSize, GLsizei* length, GLint* size, GLenum* type, GLchar* name);
void glGetAttachedShaders (GLuint program, GLsizei maxCount, GLsizei* count, GLuint* shaders);

version(WebAssembly)
{
    GLint wglGetAttribLocation (GLuint program, size_t length, const GLchar* name);
    GLint glGetAttribLocation (GLuint program, const GLchar* name)
    {
        size_t length;
        while(name[length] != 0) length++;
        return wglGetAttribLocation(program, length, name);
    }
}
else
    GLint glGetAttribLocation (GLuint program, GLchar* name);
void glGetBooleanv (GLenum pname, GLboolean* data);
void glGetBufferParameteriv (GLenum target, GLenum pname, GLint* params);
GLenum glGetError ();
void glGetFloatv (GLenum pname, GLfloat* data);
void glGetFramebufferAttachmentParameteriv (GLenum target, GLenum attachment, GLenum pname, GLint* params);
version(WebAssembly)
{
    GLint glGetParameter(GLenum pname);
    void glGetIntegerv (GLenum pname, GLint* data)
    {
        *data = glGetParameter(pname);
    }
}
else
{
    void glGetIntegerv (GLenum pname, GLint* data);
}
version(WebAssembly)
{
    GLint glGetProgramParameter (GLuint program, GLenum pname);
    void glGetProgramiv (GLuint program, GLenum pname, GLint* params)
    {
        *params = glGetProgramParameter(program, pname);
    }
}
else
{
    void glGetProgramiv (GLuint program, GLenum pname, GLint* params);
}

version(WebAssembly)
{
    ubyte* wglGetProgramInfoLog(GLuint program);
    void glGetProgramInfoLog (GLuint program, GLsizei bufSize, GLint* length, GLchar* infoLog)
    {
        ubyte* _temp = wglGetProgramInfoLog(program);
        size_t _tempLen = *cast(size_t*)_temp;
        string temp = cast(string)_temp[size_t.sizeof.._tempLen+size_t.sizeof];
        if(length) *length = temp.length;
        if(temp.length < bufSize)
            infoLog[0..temp.length] = temp[];
        else
            infoLog[0..bufSize] = temp[0..bufSize];
    }
}
else
    void glGetProgramInfoLog (GLuint program, GLsizei bufSize, GLsizei* length, GLchar* infoLog);
void glGetRenderbufferParameteriv (GLenum target, GLenum pname, GLint* params);
version(WebAssembly)
{
    GLint glGetShaderParameter(GLuint shader, GLenum pname);
    void glGetShaderiv (GLuint shader, GLenum pname, GLint* params)
    {
        *params = glGetShaderParameter(shader, pname);
    }
}
else
{
    void glGetShaderiv (GLuint shader, GLenum pname, GLint* params);
}
version(WebAssembly)
{
    /**
    *   After deep thought, I think calling wglGetShaderInfoLog the best thing to do.
    *   That way, memory can be safely freed.
    */
    ubyte* wglGetShaderInfoLog(GLuint shader);
    extern(C) void glGetShaderInfoLog (GLuint shader, GLsizei bufSize, GLsizei* length, GLchar* infoLog)
    {
        ubyte* _temp = wglGetShaderInfoLog(shader);
        size_t _tempLen = *cast(size_t*)_temp;
        string temp = cast(string)_temp[size_t.sizeof.._tempLen+size_t.sizeof];


        if(length) *length = temp.length;
        if(temp.length < bufSize)
            infoLog[0..temp.length] = temp[];
        else
            infoLog[0..bufSize] = temp[0..bufSize];
    }

}
else
{
    void glGetShaderInfoLog (GLuint shader, GLsizei bufSize, GLsizei* length, GLchar* infoLog);
}
void glGetShaderPrecisionFormat (GLenum shadertype, GLenum precisiontype, GLint* range, GLint* precision);
void glGetShaderSource (GLuint shader, GLsizei bufSize, GLsizei* length, GLchar* source);
version(WebAssembly)
{
    private bool wglIsWebgl2();

    private bool _isWebGL2 = false;
    bool isWebGL2() { return _isWebGL2; }
    GLubyte* glGetString (GLenum name)
    {
        _isWebGL2 = wglIsWebgl2();
        switch(name)
        {
            case GL_RENDERER:
                return isWebGL2 ?
                    cast(GLubyte*)"OpenGLES 3.0 emulated by WebGL 2.0(Hipreme Engine)".ptr :
                    cast(GLubyte*)"OpenGLES 2.0 emulated by WebGL 1.0(Hipreme Engine)".ptr;
            case GL_VERSION:
                return isWebGL2 ? 
                    cast(GLubyte*)"WebGL 2.0".ptr :
                    cast(GLubyte*)"WebGL 1.0".ptr;
            case GL_SHADING_LANGUAGE_VERSION:
                return isWebGL2 ?
                    cast(GLubyte*)"GLSL ES 3.0".ptr:
                    cast(GLubyte*)"GLSL ES 1.0".ptr;
            default:
            return null;
        }
    }
}
else
{
    GLubyte* glGetString (GLenum name);
}
void glGetTexParameterfv (GLenum target, GLenum pname, GLfloat* params);
void glGetTexParameteriv (GLenum target, GLenum pname, GLint* params);
void glGetUniformfv (GLuint program, GLint location, GLfloat* params);
void glGetUniformiv (GLuint program, GLint location, GLint* params);
version(WebAssembly)
{
    GLint wglGetUniformLocation(GLuint program, GLuint length, GLchar* name);
    GLint glGetUniformLocation (GLuint program, GLchar* name)
    {
        size_t length = 0;
        while(name[length++] != '\0'){}
        assert(length != 0, "Can't send a 0 length string to wglGetUniformLocation");
        return wglGetUniformLocation(program, length-1, name);
    }
}
